# cmake

./: .gitignore  token.txt
CMake/cmake-boost-test/: AUTHORS.rst  CMakeCache.txt  CMakeLists.txt  ChangeLog.rst  LICENSE.txt  Makefile  README.rst  main.cpp  requirements.txt  tests.cpp  tests.h
CMake/cmake-boost-test/docs/: Makefile  compiling-tests.rst  conf.py  index.rst  make.bat  writing-tests.rst
CMake/cmake-boost-test/docs/dexy/: ctest.sh  make-test.sh  running-tests.rst
CMake/cmake-boost-test/dynamic-library/: CMakeLists.txt
CMake/cmake-boost-test/dynamic-library-find-package/: CMakeLists.txt
CMake/cmake-boost-test/header-only/: CMakeLists.txt
CMake/cmake-boost-test/static-library/: CMakeLists.txt
CMake/cmake-boost-test/static-library-find-package/: CMakeLists.txt
CMake/coverage/: CMakeLists.txt
CMake/coverage/src/: coverage.cpp
CMake/demo/: CMakeLists.txt
CMake/demo/src/: coverage.cpp
CMake/exit_code/: CMakeLists.txt
CMake/exit_code/src/: CMakeLists.txt  exit_code  exit_code.f08
CMake/neil/: CMakeLists.txt
CMake/test/: CMakeLists.txt
CMake/test/src/: sqr.H
alpha/: CMakeLists.txt  tutorial.cxx
alpha/alpha-ctest/5328158-b28716044156635872e56efc28457bc7dc2a535d/: CMakeLists.txt  CTest-Example.cxx  README.md  a.out  test-constants.cpp
beta/: CMakeLists.txt
beta/src/: CMakeLists.txt
demo/ch-04-tests/rec-01/: CMakeLists.txt  main.cpp  sum_integers.cpp  test.cpp  test.py
demo/ch-04-tests/rec-02/: CMakeLists.txt  main.cpp  sum_integers.cpp  sum_integers.hpp  test.cpp  test.py  test.sh
demo/ch-04-tests/rec-08/using-cost-example/: CMakeLists.txt  ctest_parallel-not-working.txt
demo/ch-04-tests/recipe-08/using-cost-example/: CMakeLists.txt
demo/ch-14-cdash/rec-01/cxx-example/: CMakeLists.txt  CTestConfig.cmake
demo/ch-14-cdash/rec-01/cxx-example/src/: CMakeLists.txt  main.cpp  sum_integers.cpp  sum_integers.hpp
demo/ch-14-cdash/rec-01/cxx-example/tests/: CMakeLists.txt  test_long.cpp  test_short.cpp
demo/ch-14-cdash/rec-02/cxx-example/: CMakeLists.txt  CTestConfig.cmake  screenshot-success-cdash.txt
demo/ch-14-cdash/rec-02/cxx-example/src/: CMakeLists.txt  main.cpp  sum_integers.cpp
demo/ch-14-cdash/rec-03/cxx-example/: CMakeLists.txt  CTestConfig.cmake
demo/ch-14-cdash/rec-03/cxx-example/src/: CMakeLists.txt
demo/ch-14-cdash/rec-03/cxx-example/tests/: CMakeLists.txt  leaky.cpp  use_after_free.cpp
demo/ch-14-cdash/rec-03/fortran-example/: CMakeLists.txt  CTestConfig.cmake  dashboard.cmake
demo/ch-14-cdash/rec-03/fortran-example/src/: CMakeLists.txt  buggy.f90
demo/ch-14-cdash/rec-03/fortran-example/tests/: CMakeLists.txt  leaky.f90  out_of_bounds.f90
demo/ch-14-cdash/recipe-03/cxx-example/build_no_asan/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
demo/ch-14-cdash/recipe-03/cxx-example/build_no_asan/Testing/Temporary/: CTestCostData.txt
demo/ch-14-cdash/recipe-03/cxx-example/build_no_asan/tests/: CTestTestfile.cmake  cmake_install.cmake  leaky  use_after_free
demo/docker/laptop/: container-wrangler.txt  docker container attach.txt  docker-drama-docker run -it 47e992d8adf9.txt
demo/proj-001/: CMakeLists.txt  bad-hal.cpp  ss-cmake.txt
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  tutorial.cxx
gpg_project/c_coverage/src/: coverage.cpp
gpg_project/f_exit_code/: verify.txt
gpg_project/f_exit_code/src/: call_exit_test.F90
mathnathan/: CMakeLists.txt  fib.c
mirko/: CMakeLists.txt
nguyen/: CMakeLists.txt
sandbox/beta/: CMakeLists.txt
sandbox/beta/src/: XCMakeLists.txt  tutorial.cxx
sandbox/neil/: compiler.sh
sandbox/neil/src/: call_exit_test.F90
sandbox/petaca2-mwe/: CMakeLists.txt
sandbox/recipe-09/fortran-example/: CMakeLists.txt
stash/: CMakeLists.txt  XCMakeLists.txt
teamcity/Production/test_codes/c_coverage/: cmake results.txt
teamcity/Production/test_codes/f_exit_code/: verify.txt
teamcity/Production_test_codes/c_coverage/: CMakeLists.txt
teamcity/Production_test_codes/f_exit_code/: CMakeLists.txt
teamcity/Production_test_codes/f_exit_code/src/: call_exit_test.F90
teamcity/coverage/: CMakeLists.txt
teamcity/coverage/src/: coverage
teamcity/petaca2-mwe/src/: CMakeLists.txt  tc_test.f08
teamcity/test_codes/c_coverage/src/: coverage.cpp
teamcity/test_codes/f_exit_code/: CMakeLists.txt
text-files/: cookbook-install-and-test.txt  ss-macbook-pro.rtf  ss-macpro-desktop-lanl.txt
